// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated hook scripts > antigravity > matches the recorded output byte for byte 1`] = `
{
  ".intutic/hooks/antigravity-check.sh": "#!/usr/bin/env bash
# Intutic Antigravity (Gemini CLI) PreToolUse governance gate.
# Auto-generated by intutic sync-daemon. DO NOT EDIT.
# Proxy: http://127.0.0.1:4000
# Generated: <TIMESTAMP>
# Workspace: ws_test
set -euo pipefail

INPUT="$(cat)"

if ! command -v python3 >/dev/null 2>&1; then
  echo "[Intutic Governance] BLOCKED: python3 is required to evaluate tool calls and was not found on PATH." >&2
  echo "[Intutic Governance] Install python3, or unset the Intutic hooks to run ungoverned." >&2
  exit 2
fi

INTUTIC_FIELDS="$(printf '%s' "$INPUT" | python3 -c '
import sys, json
def clean(v):
    return " ".join(str(v).split()) if isinstance(v, str) else ""
try:
    d = json.load(sys.stdin)
except Exception:
    d = {}
if not isinstance(d, dict):
    d = {}
i = d.get("tool_input") or {}
if not isinstance(i, dict):
    i = {}
def first(*keys):
    for k in keys:
        v = i.get(k)
        if isinstance(v, str) and v:
            return clean(v)
    return ""
print(clean(d.get("tool_name", "")))
print(first("path", "file_path", "notebook_path", "filePath"))
print(first("command", "cmd", "script", "shell_command"))
print(clean(d.get("session_id", d.get("sessionId", ""))))
' 2>/dev/null || printf '\\n\\n\\n\\n')"

# Each read is \`|| true\` because command substitution strips trailing newlines:
# a tool call with no command argument yields two lines, not three, so the third
# read hits EOF and returns non-zero. Under \`set -e\` that killed the gate with
# **exit 1** — which every harness reads as a hook error and lets the call
# through. A guard that fails open on the most ordinary input there is (a Write
# with no shell command) is worse than no guard, because it looks present.
{ IFS= read -r TOOL || true; IFS= read -r TARGET || true; IFS= read -r COMMAND || true; IFS= read -r SESSION_ID || true; } <<EOF_INTUTIC_FIELDS
$INTUTIC_FIELDS
EOF_INTUTIC_FIELDS
TOOL="\${TOOL:-}"; TARGET="\${TARGET:-}"; COMMAND="\${COMMAND:-}"; SESSION_ID="\${SESSION_ID:-}"
# Aliases for the names the older writers used. Kept so this extractor is a
# drop-in for every bash gate; the canonical names are the unsuffixed ones.
TOOL_NAME="$TOOL"; TARGET_PATH="$TARGET"


HOOK_EVENTS_LOG="<ROOT>/.intutic/events/hook-events.jsonl"

# ── Runtime credentials (sourced from ~/.intutic/env/runtime.env) ────────────────────────
# These are defaults, and they are also the only thing standing between
# \`set -u\` and a fatal unbound-variable error: log_event reads all three, so on
# a machine with no runtime.env to source, an unset name kills the gate before
# it can exit 2. Spelling matters — INTUTIC_, never INTUITIC_.
RUNTIME_ENV="$HOME/.intutic/env/runtime.env"
INTUTIC_HOST="https://api.intutic.ai"
INTUTIC_API_KEY=""
INTUTIC_WORKSPACE_ID="ws_test"
[ -f "$RUNTIME_ENV" ] && source "$RUNTIME_ENV" 2>/dev/null || true

log_event() {
  local verdict="$1" tool="$2" reason="$3"
  # \`tool\` and \`reason\` carry agent-controlled text — the tool name, and the
  # target path quoted into the block reason — and both are spliced into the
  # JSON string below. Escape first: one unescaped quote yields a line
  # JSON.parse rejects, and drainHookEvents drops malformed lines then wipes the
  # log on a successful drain, so the record of a block is destroyed rather than
  # delayed. A crafted path could otherwise close the string and forge fields.
  tool="\${tool//\\\\/\\\\\\\\}";     tool="\${tool//\\"/\\\\\\"}"
  reason="\${reason//\\\\/\\\\\\\\}"; reason="\${reason//\\"/\\\\\\"}"
  # Every C0 control character, not just newline and carriage return. JSON
  # forbids all of U+0000-U+001F unescaped, so a plain TAB in a filename — no
  # adversary required — was still enough to produce a line JSON.parse rejects.
  # (NUL cannot appear in a bash variable, so the range starts at \\x01.)
  tool="\${tool//[$'\\x01'-$'\\x1f']/ }"; reason="\${reason//[$'\\x01'-$'\\x1f']/ }"
  # The workspace id is spliced into the same JSON string. It comes from
  # runtime.env on disk rather than from the agent, so it is lower risk — but a
  # value with a quote in it breaks every audit line the same way, and "lower
  # risk" is not "cannot happen" for a file the operator edits by hand.
  local ws="\${INTUTIC_WORKSPACE_ID}"
  ws="\${ws//\\\\/\\\\\\\\}"; ws="\${ws//\\"/\\\\\\"}"; ws="\${ws//[$'\\x01'-$'\\x1f']/ }"
  local ts; ts="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
  local incident_id; incident_id="$(printf '%s' "\${ts}\${tool}\${INTUTIC_WORKSPACE_ID}" | sha1sum 2>/dev/null | cut -c1-16 || echo "$(date +%s)")"
  local entry="{\\"event\\":\\"\${verdict}\\",\\"toolName\\":\\"\${tool}\\",\\"reason\\":\\"\${reason}\\",\\"workspaceId\\":\\"\${ws}\\",\\"harnessType\\":\\"antigravity\\",\\"timestamp\\":\\"\${ts}\\",\\"incidentId\\":\\"\${incident_id}\\"}"
  printf '%s\\n' "$entry" >> "$HOOK_EVENTS_LOG" 2>/dev/null || true
  if [ -n "$INTUTIC_API_KEY" ]; then
    curl -s -o /dev/null --max-time 3 -X POST \\
      -H "Content-Type: application/json" \\
      -H "Authorization: Bearer $INTUTIC_API_KEY" \\
      -d "{\\"events\\":[$entry]}" \\
      "\${INTUTIC_HOST}/api/v1/hook-events" & disown 2>/dev/null || true
  fi
}


# ── Intutic gate body v3 — harness: antigravity ────────────
# Generated by harness/gateBody.ts. Do not edit here; every harness regenerates.
#
# The harness name and version are stamped so this file identifies itself. Both
# were previously passed in and dropped on the floor: opts.harness was declared
# on the option type, supplied by all thirteen writers, and read nowhere.

intutic_normalise() {
  local s="$1"
  s="\${s//[$'\\t\\n\\r\\v\\f']/ }"
  while [ "$s" != "\${s//  / }" ]; do s="\${s//  / }"; done
  printf ' %s ' "$s"
}

# The static floor: compiled in, always enforced, never sourced from disk.
# These are the families with years of evidence behind them, so they block from
# the first run — before any sync has happened.
INTUTIC_FLOOR=(
  'bypass.chflags_nouchg	block	-	any	Governance bypass pattern: clearing the macOS immutable flag on a governance file	 chflags .*nouchg'
  'bypass.chattr_immutable	block	-	any	Governance bypass pattern: clearing the Linux immutable attribute on a governance file	 chattr .*-[a-zA-Z]*i'
  'bypass.chmod_governance	block	-	any	Governance bypass pattern: changing permissions on a governance file	 chmod .*(hooks|\\.intutic|\\.claude|\\.cursor)'
  'bypass.env_kill_switch	block	-	any	Governance bypass pattern: setting a harness environment variable that disables its hooks	 [A-Z][A-Z0-9_]*_HOOKS?='
  'path.intutic_hooks	block	-	any	Shell command references the governance-protected path .intutic/hooks	\\.intutic/hooks'
  'path.intutic_integrity_json	block	-	any	Shell command references the governance-protected path .intutic/integrity.json	\\.intutic/integrity\\.json'
  'path.intutic_events	block	-	any	Shell command references the governance-protected path .intutic/events	\\.intutic/events'
  'path.claude_settings_json	block	-	any	Shell command references the governance-protected path .claude/settings.json	\\.claude/settings\\.json'
  'path.claude_settings_local_json	block	-	any	Shell command references the governance-protected path .claude/settings.local.json	\\.claude/settings\\.local\\.json'
  'path.cursor_hooks_json	block	-	any	Shell command references the governance-protected path .cursor/hooks.json	\\.cursor/hooks\\.json'
  'path.cline_hooks	block	-	any	Shell command references the governance-protected path .cline/hooks	\\.cline/hooks'
  'path.codeium_windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .codeium/windsurf/hooks.json	\\.codeium/windsurf/hooks\\.json'
  'path.windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .windsurf/hooks.json	\\.windsurf/hooks\\.json'
  'path.openhands_hooks_json	block	-	any	Shell command references the governance-protected path .openhands/hooks.json	\\.openhands/hooks\\.json'
  'path.gemini_settings_json	block	-	any	Shell command references the governance-protected path .gemini/settings.json	\\.gemini/settings\\.json'
  'path.agents_plugins_intutic_governance	block	-	any	Shell command references the governance-protected path .agents/plugins/intutic-governance	\\.agents/plugins/intutic-governance'
)

# The dynamic tier, read from the policy snapshot. Additive only: it can turn an
# allow into a block, never a block into an allow. See policySnapshot.ts.
INTUTIC_SNAPSHOT_RULES="\${INTUTIC_SNAPSHOT_RULES:-$HOME/.intutic/hooks/policy-snapshot.rules}"
INTUTIC_SNAPSHOT_DIGEST="none"
INTUTIC_SNAPSHOT_STATE="absent"
INTUTIC_DYNAMIC=()

# A supported escape hatch, and the reason it exists is not politeness.
#
# The fastest workaround available to a developer wrongly blocked is
# \`chflags nouchg\` on the hook — the exact bypass the floor exists to stop. If
# the only way out is one we treat as an attack, we have manufactured our own
# adversary. So: an escape we can see, that disables the **dynamic tier only**.
# The floor is never disabled by it. Every invocation while it is set emits an
# event, so a machine running ungoverned is visible rather than quiet.
INTUTIC_GUARDS_DISABLED=0
if [ "\${INTUTIC_GUARD_DISABLE:-}" = "1" ]; then
  INTUTIC_GUARDS_DISABLED=1
  log_event "guards_disabled" "\${TOOL:-}" "INTUTIC_GUARD_DISABLE=1 — policy-snapshot rules skipped; built-in protections still active" || true
fi

INTUTIC_SNAPSHOT_WORKSPACE=""
INTUTIC_SNAPSHOT_GENERATED=""
if [ -f "$INTUTIC_SNAPSHOT_RULES" ]; then
  INTUTIC_SNAPSHOT_STATE="ok"
  while IFS= read -r _line || [ -n "$_line" ]; do
    case "$_line" in
      '#digest '*)    INTUTIC_SNAPSHOT_DIGEST="\${_line#\\#digest }" ;;
      '#workspace '*) INTUTIC_SNAPSHOT_WORKSPACE="\${_line#\\#workspace }" ;;
      '#generated '*) INTUTIC_SNAPSHOT_GENERATED="\${_line#\\#generated }" ;;
      '#'*|'') : ;;
      *) INTUTIC_DYNAMIC+=("$_line") ;;
    esac
  done < "$INTUTIC_SNAPSHOT_RULES"

  # Integrity, in the order that fails cheapest first.
  #
  # All three of these were parsed and then ignored. A digest nobody recomputes
  # is not integrity, it is a comment; and a workspace id nobody compares means a
  # snapshot from workspace A dropped onto workspace B's machine is enforced
  # verbatim, with B's audit events attributing A's rules to B.
  _intutic_body="$(grep -v '^#' "$INTUTIC_SNAPSHOT_RULES" | grep -v '^$' || true)"
  _intutic_actual=""
  if command -v shasum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | shasum -a 256 | cut -c1-32)"
  elif command -v sha256sum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | sha256sum | cut -c1-32)"
  fi

  if [ -n "$_intutic_actual" ] && [ "$_intutic_actual" != "$INTUTIC_SNAPSHOT_DIGEST" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ -n "$INTUTIC_SNAPSHOT_WORKSPACE" ] && [ -n "\${INTUTIC_WORKSPACE_ID:-}" ]        && [ "$INTUTIC_SNAPSHOT_WORKSPACE" != "$INTUTIC_WORKSPACE_ID" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ \${#INTUTIC_DYNAMIC[@]} -eq 0 ]; then
    # Distinct from "absent". The writer always ships the destructive tier, so a
    # rule-less snapshot means the compile produced nothing — a real fault that
    # otherwise looks exactly like a healthy quiet workspace.
    INTUTIC_SNAPSHOT_STATE="empty"
  fi

  # Degrade to the compiled floor. The dynamic tier is additive, so dropping it
  # returns to yesterday's behaviour rather than opening a hole.
  if [ "$INTUTIC_SNAPSHOT_STATE" = "invalid" ]; then
    INTUTIC_DYNAMIC=()
  fi
fi

# Staleness governs alerting, not enforcement: rules stay in force. If they
# expired into permissiveness, "kill the daemon and wait" would be a supported
# way to disarm governance.
if [ "$INTUTIC_SNAPSHOT_STATE" = "ok" ] && [ -n "$INTUTIC_SNAPSHOT_GENERATED" ]; then
  _intutic_age_days="$(python3 -c 'import sys,datetime
try:
    t=datetime.datetime.fromisoformat(sys.argv[1].replace("Z","+00:00"))
    print(int((datetime.datetime.now(datetime.timezone.utc)-t).total_seconds()//86400))
except Exception:
    print(0)' "$INTUTIC_SNAPSHOT_GENERATED" 2>/dev/null || echo 0)"
  if [ "$_intutic_age_days" -gt 7 ] 2>/dev/null; then
    INTUTIC_SNAPSHOT_STATE="stale"
  fi
fi

case "$INTUTIC_SNAPSHOT_STATE" in
  absent)  log_event "snapshot_absent" "\${TOOL:-}" "No policy snapshot at $INTUTIC_SNAPSHOT_RULES — built-in protections only" || true ;;
  invalid) log_event "snapshot_invalid" "\${TOOL:-}" "Policy snapshot failed its digest or workspace check — dynamic rules dropped" || true ;;
  empty)   log_event "snapshot_empty" "\${TOOL:-}" "Policy snapshot contains no rules — the compile produced nothing" || true ;;
  stale)   log_event "snapshot_stale" "\${TOOL:-}" "Policy snapshot is \${_intutic_age_days} days old and still enforced" || true ;;
esac

# Normalise once; every pattern is written against this shape.
INTUTIC_NCOMMAND="$(intutic_normalise "\${COMMAND:-}")"
INTUTIC_NTARGET="$(intutic_normalise "\${TARGET:-}")"
INTUTIC_NTOOL="$(intutic_normalise "\${TOOL:-}")"

# A rule declares which part of the call it matches. \`any\` means command and
# target — never the tool name, because a pattern like \`\\.claude/settings\\.json\`
# would otherwise be tested against "Write" and quietly match nothing.
intutic_apply() {
  local rec="$1"
  local rid rsev rflags rsubj rreason rsrc s hit
  IFS=$'\\t' read -r rid rsev rflags rsubj rreason rsrc <<< "$rec"
  [ -z "$rsrc" ] && return 0
  # The escape hatch skips the DESTRUCTIVE family only. It is not a way to turn
  # off a workspace's own BLOCK: SOP rules — those are what the customer asked
  # for, and one environment variable disarming them would make the switch the
  # first thing an agent sets. Keyed on the rule-id family, which the snapshot
  # writer assigns: destructive.* versus sop.*
  if [ "$INTUTIC_GUARDS_DISABLED" = "1" ]; then
    case "$rid" in
      destructive.*) return 0 ;;
    esac
  fi
  local _subs=()
  case "$rsubj" in
    tool)    _subs=("$INTUTIC_NTOOL") ;;
    command) _subs=("$INTUTIC_NCOMMAND") ;;
    target)  _subs=("$INTUTIC_NTARGET") ;;
    # Each field is tested separately rather than concatenated. Joining them
    # lets a pattern match across the seam — a command ending in "chflags" and
    # an unrelated target starting with "nouchg" would trip the bypass rule
    # together while neither does alone.
    *)       _subs=("$INTUTIC_NCOMMAND" "$INTUTIC_NTARGET") ;;
  esac
  hit=0
  for s in "\${_subs[@]}"; do
    if [ "$rflags" = "i" ]; then
      printf '%s' "$s" | grep -qiE -- "$rsrc" && hit=1
    else
      printf '%s' "$s" | grep -qE -- "$rsrc" && hit=1
    fi
  done
  [ "$hit" = "1" ] || return 0
  if [ "$rsev" = "shadow" ]; then
    log_event "tool_would_block" "\${TOOL:-}" "\${rreason} [\${rid}]" || true
    return 0
  fi
  if [ "$rsev" = "warn" ]; then
    # Advisory tier: allowed, and recorded with enough shape to triage.
    #
    # The rule id alone was not enough. The warn tier exists to earn promotion to
    # block from a measured false-positive rate, and you cannot call a flag true
    # or false without seeing something of what was run. So: the first token of
    # the command, and nothing else. That is the verb — curl, git, rm — which is
    # what distinguishes "a real destructive command" from "a false positive on a
    # build script", and it carries no paths, no arguments, no secrets. The full
    # command stays out deliberately; that is what DLP exists to keep out of
    # telemetry.
    _intutic_verb="\${INTUTIC_NCOMMAND# }"
    _intutic_verb="\${_intutic_verb%% *}"
    log_event "tool_flagged" "\${TOOL:-}" "\${rreason} [\${rid}] verb=\${_intutic_verb}" || true
    return 0
  fi
  # The rule's own reason, not a generic one: hookEvents.resolveSeverity reads
  # this text for "governance-protected" to file the incident CRITICAL.
  local reason="\${rreason} [\${rid}]"
  echo "[Intutic Governance] BLOCKED: \${reason}" >&2
  log_event "tool_blocked" "\${TOOL:-}" "\${reason}"
  exit 2
}

for _rec in "\${INTUTIC_FLOOR[@]}"; do
  intutic_apply "$_rec"
done

if [ \${#INTUTIC_DYNAMIC[@]} -gt 0 ]; then
  for _rec in "\${INTUTIC_DYNAMIC[@]}"; do
    intutic_apply "$_rec"
  done
fi
# ── end Intutic gate body ────────────────────────────────────────────────────

log_event "tool_allowed" "$TOOL_NAME" ""
exit 0
",
}
`;

exports[`generated hook scripts > goose > matches the recorded output byte for byte 1`] = `
{
  ".agents/plugins/intutic-governance/scripts/intutic-check.sh": "#!/usr/bin/env bash
# Intutic Goose PreToolUse governance gate.
# Auto-generated by intutic sync-daemon. DO NOT EDIT.
# Proxy: http://127.0.0.1:4000
# Generated: <TIMESTAMP>
set -euo pipefail

EVENT="\${1:-pre}"
INPUT="$(cat)"

if ! command -v python3 >/dev/null 2>&1; then
  echo "[Intutic Governance] BLOCKED: python3 is required to evaluate tool calls and was not found on PATH." >&2
  echo "[Intutic Governance] Install python3, or unset the Intutic hooks to run ungoverned." >&2
  exit 2
fi

INTUTIC_FIELDS="$(printf '%s' "$INPUT" | python3 -c '
import sys, json
def clean(v):
    return " ".join(str(v).split()) if isinstance(v, str) else ""
try:
    d = json.load(sys.stdin)
except Exception:
    d = {}
if not isinstance(d, dict):
    d = {}
i = d.get("tool_input") or {}
if not isinstance(i, dict):
    i = {}
def first(*keys):
    for k in keys:
        v = i.get(k)
        if isinstance(v, str) and v:
            return clean(v)
    return ""
print(clean(d.get("tool_name", "")))
print(first("path", "file_path", "notebook_path", "filePath"))
print(first("command", "cmd", "script", "shell_command"))
print(clean(d.get("session_id", d.get("sessionId", ""))))
' 2>/dev/null || printf '\\n\\n\\n\\n')"

# Each read is \`|| true\` because command substitution strips trailing newlines:
# a tool call with no command argument yields two lines, not three, so the third
# read hits EOF and returns non-zero. Under \`set -e\` that killed the gate with
# **exit 1** — which every harness reads as a hook error and lets the call
# through. A guard that fails open on the most ordinary input there is (a Write
# with no shell command) is worse than no guard, because it looks present.
{ IFS= read -r TOOL || true; IFS= read -r TARGET || true; IFS= read -r COMMAND || true; IFS= read -r SESSION_ID || true; } <<EOF_INTUTIC_FIELDS
$INTUTIC_FIELDS
EOF_INTUTIC_FIELDS
TOOL="\${TOOL:-}"; TARGET="\${TARGET:-}"; COMMAND="\${COMMAND:-}"; SESSION_ID="\${SESSION_ID:-}"
# Aliases for the names the older writers used. Kept so this extractor is a
# drop-in for every bash gate; the canonical names are the unsuffixed ones.
TOOL_NAME="$TOOL"; TARGET_PATH="$TARGET"


HOOK_EVENTS_LOG="<ROOT>/.intutic/events/hook-events.jsonl"

# ── Runtime credentials (sourced from ~/.intutic/env/runtime.env) ────────────────────────
# These are defaults, and they are also the only thing standing between
# \`set -u\` and a fatal unbound-variable error: log_event reads all three, so on
# a machine with no runtime.env to source, an unset name kills the gate before
# it can exit 2. Spelling matters — INTUTIC_, never INTUITIC_.
RUNTIME_ENV="$HOME/.intutic/env/runtime.env"
INTUTIC_HOST="https://api.intutic.ai"
INTUTIC_API_KEY=""
INTUTIC_WORKSPACE_ID="ws_test"
[ -f "$RUNTIME_ENV" ] && source "$RUNTIME_ENV" 2>/dev/null || true

log_event() {
  local verdict="$1" tool="$2" reason="$3"
  # \`tool\` and \`reason\` carry agent-controlled text — the tool name, and the
  # target path quoted into the block reason — and both are spliced into the
  # JSON string below. Escape first: one unescaped quote yields a line
  # JSON.parse rejects, and drainHookEvents drops malformed lines then wipes the
  # log on a successful drain, so the record of a block is destroyed rather than
  # delayed. A crafted path could otherwise close the string and forge fields.
  tool="\${tool//\\\\/\\\\\\\\}";     tool="\${tool//\\"/\\\\\\"}"
  reason="\${reason//\\\\/\\\\\\\\}"; reason="\${reason//\\"/\\\\\\"}"
  # Every C0 control character, not just newline and carriage return. JSON
  # forbids all of U+0000-U+001F unescaped, so a plain TAB in a filename — no
  # adversary required — was still enough to produce a line JSON.parse rejects.
  # (NUL cannot appear in a bash variable, so the range starts at \\x01.)
  tool="\${tool//[$'\\x01'-$'\\x1f']/ }"; reason="\${reason//[$'\\x01'-$'\\x1f']/ }"
  # The workspace id is spliced into the same JSON string. It comes from
  # runtime.env on disk rather than from the agent, so it is lower risk — but a
  # value with a quote in it breaks every audit line the same way, and "lower
  # risk" is not "cannot happen" for a file the operator edits by hand.
  local ws="\${INTUTIC_WORKSPACE_ID}"
  ws="\${ws//\\\\/\\\\\\\\}"; ws="\${ws//\\"/\\\\\\"}"; ws="\${ws//[$'\\x01'-$'\\x1f']/ }"
  local ts; ts="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
  local incident_id; incident_id="$(printf '%s' "\${ts}\${tool}\${INTUTIC_WORKSPACE_ID}" | sha1sum 2>/dev/null | cut -c1-16 || echo "$(date +%s)")"
  local entry="{\\"event\\":\\"\${verdict}\\",\\"toolName\\":\\"\${tool}\\",\\"reason\\":\\"\${reason}\\",\\"workspaceId\\":\\"\${ws}\\",\\"harnessType\\":\\"goose\\",\\"timestamp\\":\\"\${ts}\\",\\"incidentId\\":\\"\${incident_id}\\"}"
  # Path B: reliable file append
  printf '%s\\n' "$entry" >> "$HOOK_EVENTS_LOG" 2>/dev/null || true
  # Path A: fire-and-forget HTTP (non-blocking, near-real-time)
  if [ -n "$INTUTIC_API_KEY" ]; then
    curl -s -o /dev/null --max-time 3 -X POST \\
      -H "Content-Type: application/json" \\
      -H "Authorization: Bearer $INTUTIC_API_KEY" \\
      -d "{\\"events\\":[$entry]}" \\
      "\${INTUTIC_HOST}/api/v1/hook-events" & disown 2>/dev/null || true
  fi
}


# ── Intutic gate body v3 — harness: goose ────────────
# Generated by harness/gateBody.ts. Do not edit here; every harness regenerates.
#
# The harness name and version are stamped so this file identifies itself. Both
# were previously passed in and dropped on the floor: opts.harness was declared
# on the option type, supplied by all thirteen writers, and read nowhere.

intutic_normalise() {
  local s="$1"
  s="\${s//[$'\\t\\n\\r\\v\\f']/ }"
  while [ "$s" != "\${s//  / }" ]; do s="\${s//  / }"; done
  printf ' %s ' "$s"
}

# The static floor: compiled in, always enforced, never sourced from disk.
# These are the families with years of evidence behind them, so they block from
# the first run — before any sync has happened.
INTUTIC_FLOOR=(
  'bypass.chflags_nouchg	block	-	any	Governance bypass pattern: clearing the macOS immutable flag on a governance file	 chflags .*nouchg'
  'bypass.chattr_immutable	block	-	any	Governance bypass pattern: clearing the Linux immutable attribute on a governance file	 chattr .*-[a-zA-Z]*i'
  'bypass.chmod_governance	block	-	any	Governance bypass pattern: changing permissions on a governance file	 chmod .*(hooks|\\.intutic|\\.claude|\\.cursor)'
  'bypass.env_kill_switch	block	-	any	Governance bypass pattern: setting a harness environment variable that disables its hooks	 [A-Z][A-Z0-9_]*_HOOKS?='
  'path.intutic_hooks	block	-	any	Shell command references the governance-protected path .intutic/hooks	\\.intutic/hooks'
  'path.intutic_integrity_json	block	-	any	Shell command references the governance-protected path .intutic/integrity.json	\\.intutic/integrity\\.json'
  'path.intutic_events	block	-	any	Shell command references the governance-protected path .intutic/events	\\.intutic/events'
  'path.claude_settings_json	block	-	any	Shell command references the governance-protected path .claude/settings.json	\\.claude/settings\\.json'
  'path.claude_settings_local_json	block	-	any	Shell command references the governance-protected path .claude/settings.local.json	\\.claude/settings\\.local\\.json'
  'path.cursor_hooks_json	block	-	any	Shell command references the governance-protected path .cursor/hooks.json	\\.cursor/hooks\\.json'
  'path.cline_hooks	block	-	any	Shell command references the governance-protected path .cline/hooks	\\.cline/hooks'
  'path.codeium_windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .codeium/windsurf/hooks.json	\\.codeium/windsurf/hooks\\.json'
  'path.windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .windsurf/hooks.json	\\.windsurf/hooks\\.json'
  'path.openhands_hooks_json	block	-	any	Shell command references the governance-protected path .openhands/hooks.json	\\.openhands/hooks\\.json'
  'path.gemini_settings_json	block	-	any	Shell command references the governance-protected path .gemini/settings.json	\\.gemini/settings\\.json'
  'path.agents_plugins_intutic_governance	block	-	any	Shell command references the governance-protected path .agents/plugins/intutic-governance	\\.agents/plugins/intutic-governance'
)

# The dynamic tier, read from the policy snapshot. Additive only: it can turn an
# allow into a block, never a block into an allow. See policySnapshot.ts.
INTUTIC_SNAPSHOT_RULES="\${INTUTIC_SNAPSHOT_RULES:-$HOME/.intutic/hooks/policy-snapshot.rules}"
INTUTIC_SNAPSHOT_DIGEST="none"
INTUTIC_SNAPSHOT_STATE="absent"
INTUTIC_DYNAMIC=()

# A supported escape hatch, and the reason it exists is not politeness.
#
# The fastest workaround available to a developer wrongly blocked is
# \`chflags nouchg\` on the hook — the exact bypass the floor exists to stop. If
# the only way out is one we treat as an attack, we have manufactured our own
# adversary. So: an escape we can see, that disables the **dynamic tier only**.
# The floor is never disabled by it. Every invocation while it is set emits an
# event, so a machine running ungoverned is visible rather than quiet.
INTUTIC_GUARDS_DISABLED=0
if [ "\${INTUTIC_GUARD_DISABLE:-}" = "1" ]; then
  INTUTIC_GUARDS_DISABLED=1
  log_event "guards_disabled" "\${TOOL:-}" "INTUTIC_GUARD_DISABLE=1 — policy-snapshot rules skipped; built-in protections still active" || true
fi

INTUTIC_SNAPSHOT_WORKSPACE=""
INTUTIC_SNAPSHOT_GENERATED=""
if [ -f "$INTUTIC_SNAPSHOT_RULES" ]; then
  INTUTIC_SNAPSHOT_STATE="ok"
  while IFS= read -r _line || [ -n "$_line" ]; do
    case "$_line" in
      '#digest '*)    INTUTIC_SNAPSHOT_DIGEST="\${_line#\\#digest }" ;;
      '#workspace '*) INTUTIC_SNAPSHOT_WORKSPACE="\${_line#\\#workspace }" ;;
      '#generated '*) INTUTIC_SNAPSHOT_GENERATED="\${_line#\\#generated }" ;;
      '#'*|'') : ;;
      *) INTUTIC_DYNAMIC+=("$_line") ;;
    esac
  done < "$INTUTIC_SNAPSHOT_RULES"

  # Integrity, in the order that fails cheapest first.
  #
  # All three of these were parsed and then ignored. A digest nobody recomputes
  # is not integrity, it is a comment; and a workspace id nobody compares means a
  # snapshot from workspace A dropped onto workspace B's machine is enforced
  # verbatim, with B's audit events attributing A's rules to B.
  _intutic_body="$(grep -v '^#' "$INTUTIC_SNAPSHOT_RULES" | grep -v '^$' || true)"
  _intutic_actual=""
  if command -v shasum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | shasum -a 256 | cut -c1-32)"
  elif command -v sha256sum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | sha256sum | cut -c1-32)"
  fi

  if [ -n "$_intutic_actual" ] && [ "$_intutic_actual" != "$INTUTIC_SNAPSHOT_DIGEST" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ -n "$INTUTIC_SNAPSHOT_WORKSPACE" ] && [ -n "\${INTUTIC_WORKSPACE_ID:-}" ]        && [ "$INTUTIC_SNAPSHOT_WORKSPACE" != "$INTUTIC_WORKSPACE_ID" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ \${#INTUTIC_DYNAMIC[@]} -eq 0 ]; then
    # Distinct from "absent". The writer always ships the destructive tier, so a
    # rule-less snapshot means the compile produced nothing — a real fault that
    # otherwise looks exactly like a healthy quiet workspace.
    INTUTIC_SNAPSHOT_STATE="empty"
  fi

  # Degrade to the compiled floor. The dynamic tier is additive, so dropping it
  # returns to yesterday's behaviour rather than opening a hole.
  if [ "$INTUTIC_SNAPSHOT_STATE" = "invalid" ]; then
    INTUTIC_DYNAMIC=()
  fi
fi

# Staleness governs alerting, not enforcement: rules stay in force. If they
# expired into permissiveness, "kill the daemon and wait" would be a supported
# way to disarm governance.
if [ "$INTUTIC_SNAPSHOT_STATE" = "ok" ] && [ -n "$INTUTIC_SNAPSHOT_GENERATED" ]; then
  _intutic_age_days="$(python3 -c 'import sys,datetime
try:
    t=datetime.datetime.fromisoformat(sys.argv[1].replace("Z","+00:00"))
    print(int((datetime.datetime.now(datetime.timezone.utc)-t).total_seconds()//86400))
except Exception:
    print(0)' "$INTUTIC_SNAPSHOT_GENERATED" 2>/dev/null || echo 0)"
  if [ "$_intutic_age_days" -gt 7 ] 2>/dev/null; then
    INTUTIC_SNAPSHOT_STATE="stale"
  fi
fi

case "$INTUTIC_SNAPSHOT_STATE" in
  absent)  log_event "snapshot_absent" "\${TOOL:-}" "No policy snapshot at $INTUTIC_SNAPSHOT_RULES — built-in protections only" || true ;;
  invalid) log_event "snapshot_invalid" "\${TOOL:-}" "Policy snapshot failed its digest or workspace check — dynamic rules dropped" || true ;;
  empty)   log_event "snapshot_empty" "\${TOOL:-}" "Policy snapshot contains no rules — the compile produced nothing" || true ;;
  stale)   log_event "snapshot_stale" "\${TOOL:-}" "Policy snapshot is \${_intutic_age_days} days old and still enforced" || true ;;
esac

# Normalise once; every pattern is written against this shape.
INTUTIC_NCOMMAND="$(intutic_normalise "\${COMMAND:-}")"
INTUTIC_NTARGET="$(intutic_normalise "\${TARGET:-}")"
INTUTIC_NTOOL="$(intutic_normalise "\${TOOL:-}")"

# A rule declares which part of the call it matches. \`any\` means command and
# target — never the tool name, because a pattern like \`\\.claude/settings\\.json\`
# would otherwise be tested against "Write" and quietly match nothing.
intutic_apply() {
  local rec="$1"
  local rid rsev rflags rsubj rreason rsrc s hit
  IFS=$'\\t' read -r rid rsev rflags rsubj rreason rsrc <<< "$rec"
  [ -z "$rsrc" ] && return 0
  # The escape hatch skips the DESTRUCTIVE family only. It is not a way to turn
  # off a workspace's own BLOCK: SOP rules — those are what the customer asked
  # for, and one environment variable disarming them would make the switch the
  # first thing an agent sets. Keyed on the rule-id family, which the snapshot
  # writer assigns: destructive.* versus sop.*
  if [ "$INTUTIC_GUARDS_DISABLED" = "1" ]; then
    case "$rid" in
      destructive.*) return 0 ;;
    esac
  fi
  local _subs=()
  case "$rsubj" in
    tool)    _subs=("$INTUTIC_NTOOL") ;;
    command) _subs=("$INTUTIC_NCOMMAND") ;;
    target)  _subs=("$INTUTIC_NTARGET") ;;
    # Each field is tested separately rather than concatenated. Joining them
    # lets a pattern match across the seam — a command ending in "chflags" and
    # an unrelated target starting with "nouchg" would trip the bypass rule
    # together while neither does alone.
    *)       _subs=("$INTUTIC_NCOMMAND" "$INTUTIC_NTARGET") ;;
  esac
  hit=0
  for s in "\${_subs[@]}"; do
    if [ "$rflags" = "i" ]; then
      printf '%s' "$s" | grep -qiE -- "$rsrc" && hit=1
    else
      printf '%s' "$s" | grep -qE -- "$rsrc" && hit=1
    fi
  done
  [ "$hit" = "1" ] || return 0
  if [ "$rsev" = "shadow" ]; then
    log_event "tool_would_block" "\${TOOL:-}" "\${rreason} [\${rid}]" || true
    return 0
  fi
  if [ "$rsev" = "warn" ]; then
    # Advisory tier: allowed, and recorded with enough shape to triage.
    #
    # The rule id alone was not enough. The warn tier exists to earn promotion to
    # block from a measured false-positive rate, and you cannot call a flag true
    # or false without seeing something of what was run. So: the first token of
    # the command, and nothing else. That is the verb — curl, git, rm — which is
    # what distinguishes "a real destructive command" from "a false positive on a
    # build script", and it carries no paths, no arguments, no secrets. The full
    # command stays out deliberately; that is what DLP exists to keep out of
    # telemetry.
    _intutic_verb="\${INTUTIC_NCOMMAND# }"
    _intutic_verb="\${_intutic_verb%% *}"
    log_event "tool_flagged" "\${TOOL:-}" "\${rreason} [\${rid}] verb=\${_intutic_verb}" || true
    return 0
  fi
  # The rule's own reason, not a generic one: hookEvents.resolveSeverity reads
  # this text for "governance-protected" to file the incident CRITICAL.
  local reason="\${rreason} [\${rid}]"
  echo "[Intutic Governance] BLOCKED: \${reason}" >&2
  log_event "tool_blocked" "\${TOOL:-}" "\${reason}"
  exit 2
}

for _rec in "\${INTUTIC_FLOOR[@]}"; do
  intutic_apply "$_rec"
done

if [ \${#INTUTIC_DYNAMIC[@]} -gt 0 ]; then
  for _rec in "\${INTUTIC_DYNAMIC[@]}"; do
    intutic_apply "$_rec"
  done
fi
# ── end Intutic gate body ────────────────────────────────────────────────────


log_event "tool_allowed" "$TOOL" ""
exit 0
",
}
`;

exports[`generated hook scripts > hermes > matches the recorded output byte for byte 1`] = `
{
  ".intutic/hooks/hermes-check.sh": "#!/usr/bin/env bash
# Intutic Hermes PreToolUse governance gate.
# Auto-generated by intutic sync-daemon. DO NOT EDIT.
# Proxy: http://127.0.0.1:4000
# Generated: <TIMESTAMP>
# Workspace: ws_test
set -euo pipefail

# Source runtime credentials (never embedded in this file)
if [ -f "<ROOT>/.intutic/env/runtime.env" ]; then
  # shellcheck disable=SC1090
  source "<ROOT>/.intutic/env/runtime.env"
fi

INTUTIC_HOST="\${INTUTIC_HOST:-https://api.intutic.ai}"
INTUTIC_API_KEY="\${INTUTIC_API_KEY:-}"
INTUTIC_WORKSPACE_ID="\${INTUTIC_WORKSPACE_ID:-ws_test}"

INPUT="$(cat)"

if ! command -v python3 >/dev/null 2>&1; then
  echo "[Intutic Governance] BLOCKED: python3 is required to evaluate tool calls and was not found on PATH." >&2
  echo "[Intutic Governance] Install python3, or unset the Intutic hooks to run ungoverned." >&2
  exit 2
fi

INTUTIC_FIELDS="$(printf '%s' "$INPUT" | python3 -c '
import sys, json
def clean(v):
    return " ".join(str(v).split()) if isinstance(v, str) else ""
try:
    d = json.load(sys.stdin)
except Exception:
    d = {}
if not isinstance(d, dict):
    d = {}
i = d.get("tool_input") or {}
if not isinstance(i, dict):
    i = {}
def first(*keys):
    for k in keys:
        v = i.get(k)
        if isinstance(v, str) and v:
            return clean(v)
    return ""
print(clean(d.get("tool_name", "")))
print(first("path", "file_path", "notebook_path", "filePath"))
print(first("command", "cmd", "script", "shell_command"))
print(clean(d.get("session_id", d.get("sessionId", ""))))
' 2>/dev/null || printf '\\n\\n\\n\\n')"

# Each read is \`|| true\` because command substitution strips trailing newlines:
# a tool call with no command argument yields two lines, not three, so the third
# read hits EOF and returns non-zero. Under \`set -e\` that killed the gate with
# **exit 1** — which every harness reads as a hook error and lets the call
# through. A guard that fails open on the most ordinary input there is (a Write
# with no shell command) is worse than no guard, because it looks present.
{ IFS= read -r TOOL || true; IFS= read -r TARGET || true; IFS= read -r COMMAND || true; IFS= read -r SESSION_ID || true; } <<EOF_INTUTIC_FIELDS
$INTUTIC_FIELDS
EOF_INTUTIC_FIELDS
TOOL="\${TOOL:-}"; TARGET="\${TARGET:-}"; COMMAND="\${COMMAND:-}"; SESSION_ID="\${SESSION_ID:-}"
# Aliases for the names the older writers used. Kept so this extractor is a
# drop-in for every bash gate; the canonical names are the unsuffixed ones.
TOOL_NAME="$TOOL"; TARGET_PATH="$TARGET"


HOOK_EVENTS_LOG="<ROOT>/.intutic/events/hook-events.jsonl"

log_event() {
  local verdict="$1" tool="$2" reason="$3"
  # \`tool\` and \`reason\` carry agent-controlled text — the tool name, and the
  # target path quoted into the block reason — and both are spliced into the
  # JSON string below. Escape first: one unescaped quote yields a line
  # JSON.parse rejects, and drainHookEvents drops malformed lines then wipes the
  # log on a successful drain, so the record of a block is destroyed rather than
  # delayed. A crafted path could otherwise close the string and forge fields.
  tool="\${tool//\\\\/\\\\\\\\}";     tool="\${tool//\\"/\\\\\\"}"
  reason="\${reason//\\\\/\\\\\\\\}"; reason="\${reason//\\"/\\\\\\"}"
  # Every C0 control character, not just newline and carriage return. JSON
  # forbids all of U+0000-U+001F unescaped, so a plain TAB in a filename — no
  # adversary required — was still enough to produce a line JSON.parse rejects.
  # (NUL cannot appear in a bash variable, so the range starts at \\x01.)
  tool="\${tool//[$'\\x01'-$'\\x1f']/ }"; reason="\${reason//[$'\\x01'-$'\\x1f']/ }"
  # The workspace id is spliced into the same JSON string. It comes from
  # runtime.env on disk rather than from the agent, so it is lower risk — but a
  # value with a quote in it breaks every audit line the same way, and "lower
  # risk" is not "cannot happen" for a file the operator edits by hand.
  local ws="\${INTUTIC_WORKSPACE_ID}"
  ws="\${ws//\\\\/\\\\\\\\}"; ws="\${ws//\\"/\\\\\\"}"; ws="\${ws//[$'\\x01'-$'\\x1f']/ }"
  local ts; ts="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
  # incidentId = sha1(timestamp + toolName + workspaceId).slice(0,16)
  local incident_id; incident_id="$(echo -n "\${ts}\${tool}\${INTUTIC_WORKSPACE_ID}" | sha1sum | cut -c1-16)"
  local entry="{\\"event\\":\\"\${verdict}\\",\\"toolName\\":\\"\${tool}\\",\\"reason\\":\\"\${reason}\\",\\"workspaceId\\":\\"\${INTUTIC_WORKSPACE_ID}\\",\\"harnessType\\":\\"hermes\\",\\"incidentId\\":\\"\${incident_id}\\",\\"timestamp\\":\\"\${ts}\\"}"
  # Path B: reliable file append (sync-daemon drains on FSEvents change)
  printf '%s\\n' "$entry" >> "$HOOK_EVENTS_LOG" 2>/dev/null || true
  # Path A: fire-and-forget HTTP POST (near-real-time dashboard, non-blocking)
  if [ -n "$INTUTIC_API_KEY" ]; then
    curl -sf -X POST "\${INTUTIC_HOST}/api/v1/hook-events" \\
      -H "Content-Type: application/json" \\
      -H "Authorization: Bearer \${INTUTIC_API_KEY}" \\
      -d "{\\"events\\":[$entry]}" \\
      --max-time 5 >/dev/null 2>&1 &
  fi
}


# ── Intutic gate body v3 — harness: hermes ────────────
# Generated by harness/gateBody.ts. Do not edit here; every harness regenerates.
#
# The harness name and version are stamped so this file identifies itself. Both
# were previously passed in and dropped on the floor: opts.harness was declared
# on the option type, supplied by all thirteen writers, and read nowhere.

intutic_normalise() {
  local s="$1"
  s="\${s//[$'\\t\\n\\r\\v\\f']/ }"
  while [ "$s" != "\${s//  / }" ]; do s="\${s//  / }"; done
  printf ' %s ' "$s"
}

# The static floor: compiled in, always enforced, never sourced from disk.
# These are the families with years of evidence behind them, so they block from
# the first run — before any sync has happened.
INTUTIC_FLOOR=(
  'bypass.chflags_nouchg	block	-	any	Governance bypass pattern: clearing the macOS immutable flag on a governance file	 chflags .*nouchg'
  'bypass.chattr_immutable	block	-	any	Governance bypass pattern: clearing the Linux immutable attribute on a governance file	 chattr .*-[a-zA-Z]*i'
  'bypass.chmod_governance	block	-	any	Governance bypass pattern: changing permissions on a governance file	 chmod .*(hooks|\\.intutic|\\.claude|\\.cursor)'
  'bypass.env_kill_switch	block	-	any	Governance bypass pattern: setting a harness environment variable that disables its hooks	 [A-Z][A-Z0-9_]*_HOOKS?='
  'path.intutic_hooks	block	-	any	Shell command references the governance-protected path .intutic/hooks	\\.intutic/hooks'
  'path.intutic_integrity_json	block	-	any	Shell command references the governance-protected path .intutic/integrity.json	\\.intutic/integrity\\.json'
  'path.intutic_events	block	-	any	Shell command references the governance-protected path .intutic/events	\\.intutic/events'
  'path.claude_settings_json	block	-	any	Shell command references the governance-protected path .claude/settings.json	\\.claude/settings\\.json'
  'path.claude_settings_local_json	block	-	any	Shell command references the governance-protected path .claude/settings.local.json	\\.claude/settings\\.local\\.json'
  'path.cursor_hooks_json	block	-	any	Shell command references the governance-protected path .cursor/hooks.json	\\.cursor/hooks\\.json'
  'path.cline_hooks	block	-	any	Shell command references the governance-protected path .cline/hooks	\\.cline/hooks'
  'path.codeium_windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .codeium/windsurf/hooks.json	\\.codeium/windsurf/hooks\\.json'
  'path.windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .windsurf/hooks.json	\\.windsurf/hooks\\.json'
  'path.openhands_hooks_json	block	-	any	Shell command references the governance-protected path .openhands/hooks.json	\\.openhands/hooks\\.json'
  'path.gemini_settings_json	block	-	any	Shell command references the governance-protected path .gemini/settings.json	\\.gemini/settings\\.json'
  'path.agents_plugins_intutic_governance	block	-	any	Shell command references the governance-protected path .agents/plugins/intutic-governance	\\.agents/plugins/intutic-governance'
)

# The dynamic tier, read from the policy snapshot. Additive only: it can turn an
# allow into a block, never a block into an allow. See policySnapshot.ts.
INTUTIC_SNAPSHOT_RULES="\${INTUTIC_SNAPSHOT_RULES:-$HOME/.intutic/hooks/policy-snapshot.rules}"
INTUTIC_SNAPSHOT_DIGEST="none"
INTUTIC_SNAPSHOT_STATE="absent"
INTUTIC_DYNAMIC=()

# A supported escape hatch, and the reason it exists is not politeness.
#
# The fastest workaround available to a developer wrongly blocked is
# \`chflags nouchg\` on the hook — the exact bypass the floor exists to stop. If
# the only way out is one we treat as an attack, we have manufactured our own
# adversary. So: an escape we can see, that disables the **dynamic tier only**.
# The floor is never disabled by it. Every invocation while it is set emits an
# event, so a machine running ungoverned is visible rather than quiet.
INTUTIC_GUARDS_DISABLED=0
if [ "\${INTUTIC_GUARD_DISABLE:-}" = "1" ]; then
  INTUTIC_GUARDS_DISABLED=1
  log_event "guards_disabled" "\${TOOL:-}" "INTUTIC_GUARD_DISABLE=1 — policy-snapshot rules skipped; built-in protections still active" || true
fi

INTUTIC_SNAPSHOT_WORKSPACE=""
INTUTIC_SNAPSHOT_GENERATED=""
if [ -f "$INTUTIC_SNAPSHOT_RULES" ]; then
  INTUTIC_SNAPSHOT_STATE="ok"
  while IFS= read -r _line || [ -n "$_line" ]; do
    case "$_line" in
      '#digest '*)    INTUTIC_SNAPSHOT_DIGEST="\${_line#\\#digest }" ;;
      '#workspace '*) INTUTIC_SNAPSHOT_WORKSPACE="\${_line#\\#workspace }" ;;
      '#generated '*) INTUTIC_SNAPSHOT_GENERATED="\${_line#\\#generated }" ;;
      '#'*|'') : ;;
      *) INTUTIC_DYNAMIC+=("$_line") ;;
    esac
  done < "$INTUTIC_SNAPSHOT_RULES"

  # Integrity, in the order that fails cheapest first.
  #
  # All three of these were parsed and then ignored. A digest nobody recomputes
  # is not integrity, it is a comment; and a workspace id nobody compares means a
  # snapshot from workspace A dropped onto workspace B's machine is enforced
  # verbatim, with B's audit events attributing A's rules to B.
  _intutic_body="$(grep -v '^#' "$INTUTIC_SNAPSHOT_RULES" | grep -v '^$' || true)"
  _intutic_actual=""
  if command -v shasum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | shasum -a 256 | cut -c1-32)"
  elif command -v sha256sum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | sha256sum | cut -c1-32)"
  fi

  if [ -n "$_intutic_actual" ] && [ "$_intutic_actual" != "$INTUTIC_SNAPSHOT_DIGEST" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ -n "$INTUTIC_SNAPSHOT_WORKSPACE" ] && [ -n "\${INTUTIC_WORKSPACE_ID:-}" ]        && [ "$INTUTIC_SNAPSHOT_WORKSPACE" != "$INTUTIC_WORKSPACE_ID" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ \${#INTUTIC_DYNAMIC[@]} -eq 0 ]; then
    # Distinct from "absent". The writer always ships the destructive tier, so a
    # rule-less snapshot means the compile produced nothing — a real fault that
    # otherwise looks exactly like a healthy quiet workspace.
    INTUTIC_SNAPSHOT_STATE="empty"
  fi

  # Degrade to the compiled floor. The dynamic tier is additive, so dropping it
  # returns to yesterday's behaviour rather than opening a hole.
  if [ "$INTUTIC_SNAPSHOT_STATE" = "invalid" ]; then
    INTUTIC_DYNAMIC=()
  fi
fi

# Staleness governs alerting, not enforcement: rules stay in force. If they
# expired into permissiveness, "kill the daemon and wait" would be a supported
# way to disarm governance.
if [ "$INTUTIC_SNAPSHOT_STATE" = "ok" ] && [ -n "$INTUTIC_SNAPSHOT_GENERATED" ]; then
  _intutic_age_days="$(python3 -c 'import sys,datetime
try:
    t=datetime.datetime.fromisoformat(sys.argv[1].replace("Z","+00:00"))
    print(int((datetime.datetime.now(datetime.timezone.utc)-t).total_seconds()//86400))
except Exception:
    print(0)' "$INTUTIC_SNAPSHOT_GENERATED" 2>/dev/null || echo 0)"
  if [ "$_intutic_age_days" -gt 7 ] 2>/dev/null; then
    INTUTIC_SNAPSHOT_STATE="stale"
  fi
fi

case "$INTUTIC_SNAPSHOT_STATE" in
  absent)  log_event "snapshot_absent" "\${TOOL:-}" "No policy snapshot at $INTUTIC_SNAPSHOT_RULES — built-in protections only" || true ;;
  invalid) log_event "snapshot_invalid" "\${TOOL:-}" "Policy snapshot failed its digest or workspace check — dynamic rules dropped" || true ;;
  empty)   log_event "snapshot_empty" "\${TOOL:-}" "Policy snapshot contains no rules — the compile produced nothing" || true ;;
  stale)   log_event "snapshot_stale" "\${TOOL:-}" "Policy snapshot is \${_intutic_age_days} days old and still enforced" || true ;;
esac

# Normalise once; every pattern is written against this shape.
INTUTIC_NCOMMAND="$(intutic_normalise "\${COMMAND:-}")"
INTUTIC_NTARGET="$(intutic_normalise "\${TARGET:-}")"
INTUTIC_NTOOL="$(intutic_normalise "\${TOOL:-}")"

# A rule declares which part of the call it matches. \`any\` means command and
# target — never the tool name, because a pattern like \`\\.claude/settings\\.json\`
# would otherwise be tested against "Write" and quietly match nothing.
intutic_apply() {
  local rec="$1"
  local rid rsev rflags rsubj rreason rsrc s hit
  IFS=$'\\t' read -r rid rsev rflags rsubj rreason rsrc <<< "$rec"
  [ -z "$rsrc" ] && return 0
  # The escape hatch skips the DESTRUCTIVE family only. It is not a way to turn
  # off a workspace's own BLOCK: SOP rules — those are what the customer asked
  # for, and one environment variable disarming them would make the switch the
  # first thing an agent sets. Keyed on the rule-id family, which the snapshot
  # writer assigns: destructive.* versus sop.*
  if [ "$INTUTIC_GUARDS_DISABLED" = "1" ]; then
    case "$rid" in
      destructive.*) return 0 ;;
    esac
  fi
  local _subs=()
  case "$rsubj" in
    tool)    _subs=("$INTUTIC_NTOOL") ;;
    command) _subs=("$INTUTIC_NCOMMAND") ;;
    target)  _subs=("$INTUTIC_NTARGET") ;;
    # Each field is tested separately rather than concatenated. Joining them
    # lets a pattern match across the seam — a command ending in "chflags" and
    # an unrelated target starting with "nouchg" would trip the bypass rule
    # together while neither does alone.
    *)       _subs=("$INTUTIC_NCOMMAND" "$INTUTIC_NTARGET") ;;
  esac
  hit=0
  for s in "\${_subs[@]}"; do
    if [ "$rflags" = "i" ]; then
      printf '%s' "$s" | grep -qiE -- "$rsrc" && hit=1
    else
      printf '%s' "$s" | grep -qE -- "$rsrc" && hit=1
    fi
  done
  [ "$hit" = "1" ] || return 0
  if [ "$rsev" = "shadow" ]; then
    log_event "tool_would_block" "\${TOOL:-}" "\${rreason} [\${rid}]" || true
    return 0
  fi
  if [ "$rsev" = "warn" ]; then
    # Advisory tier: allowed, and recorded with enough shape to triage.
    #
    # The rule id alone was not enough. The warn tier exists to earn promotion to
    # block from a measured false-positive rate, and you cannot call a flag true
    # or false without seeing something of what was run. So: the first token of
    # the command, and nothing else. That is the verb — curl, git, rm — which is
    # what distinguishes "a real destructive command" from "a false positive on a
    # build script", and it carries no paths, no arguments, no secrets. The full
    # command stays out deliberately; that is what DLP exists to keep out of
    # telemetry.
    _intutic_verb="\${INTUTIC_NCOMMAND# }"
    _intutic_verb="\${_intutic_verb%% *}"
    log_event "tool_flagged" "\${TOOL:-}" "\${rreason} [\${rid}] verb=\${_intutic_verb}" || true
    return 0
  fi
  # The rule's own reason, not a generic one: hookEvents.resolveSeverity reads
  # this text for "governance-protected" to file the incident CRITICAL.
  local reason="\${rreason} [\${rid}]"
  echo "[Intutic Governance] BLOCKED: \${reason}" >&2
  log_event "tool_blocked" "\${TOOL:-}" "\${reason}"
  exit 2
}

for _rec in "\${INTUTIC_FLOOR[@]}"; do
  intutic_apply "$_rec"
done

if [ \${#INTUTIC_DYNAMIC[@]} -gt 0 ]; then
  for _rec in "\${INTUTIC_DYNAMIC[@]}"; do
    intutic_apply "$_rec"
  done
fi
# ── end Intutic gate body ────────────────────────────────────────────────────

log_event "tool_allowed" "$TOOL_NAME" ""
exit 0
",
}
`;

exports[`generated hook scripts > openhands > matches the recorded output byte for byte 1`] = `
{
  ".intutic/hooks/openhands-check.sh": "#!/usr/bin/env bash
# Intutic OpenHands PreToolUse governance gate.
# Auto-generated by intutic sync-daemon. DO NOT EDIT.
# Proxy: http://127.0.0.1:4000
# Generated: <TIMESTAMP>
set -euo pipefail

INPUT="$(cat)"

if ! command -v python3 >/dev/null 2>&1; then
  echo "[Intutic Governance] BLOCKED: python3 is required to evaluate tool calls and was not found on PATH." >&2
  echo "[Intutic Governance] Install python3, or unset the Intutic hooks to run ungoverned." >&2
  exit 2
fi

INTUTIC_FIELDS="$(printf '%s' "$INPUT" | python3 -c '
import sys, json
def clean(v):
    return " ".join(str(v).split()) if isinstance(v, str) else ""
try:
    d = json.load(sys.stdin)
except Exception:
    d = {}
if not isinstance(d, dict):
    d = {}
i = d.get("tool_input") or {}
if not isinstance(i, dict):
    i = {}
def first(*keys):
    for k in keys:
        v = i.get(k)
        if isinstance(v, str) and v:
            return clean(v)
    return ""
print(clean(d.get("tool_name", "")))
print(first("path", "file_path", "notebook_path", "filePath"))
print(first("command", "cmd", "script", "shell_command"))
print(clean(d.get("session_id", d.get("sessionId", ""))))
' 2>/dev/null || printf '\\n\\n\\n\\n')"

# Each read is \`|| true\` because command substitution strips trailing newlines:
# a tool call with no command argument yields two lines, not three, so the third
# read hits EOF and returns non-zero. Under \`set -e\` that killed the gate with
# **exit 1** — which every harness reads as a hook error and lets the call
# through. A guard that fails open on the most ordinary input there is (a Write
# with no shell command) is worse than no guard, because it looks present.
{ IFS= read -r TOOL || true; IFS= read -r TARGET || true; IFS= read -r COMMAND || true; IFS= read -r SESSION_ID || true; } <<EOF_INTUTIC_FIELDS
$INTUTIC_FIELDS
EOF_INTUTIC_FIELDS
TOOL="\${TOOL:-}"; TARGET="\${TARGET:-}"; COMMAND="\${COMMAND:-}"; SESSION_ID="\${SESSION_ID:-}"
# Aliases for the names the older writers used. Kept so this extractor is a
# drop-in for every bash gate; the canonical names are the unsuffixed ones.
TOOL_NAME="$TOOL"; TARGET_PATH="$TARGET"


HOOK_EVENTS_LOG="<ROOT>/.intutic/events/hook-events.jsonl"

# ── Runtime credentials (sourced from ~/.intutic/env/runtime.env) ────────────────────────
# These are defaults, and they are also the only thing standing between
# \`set -u\` and a fatal unbound-variable error: log_event reads all three, so on
# a machine with no runtime.env to source, an unset name kills the gate before
# it can exit 2. Spelling matters — INTUTIC_, never INTUITIC_.
RUNTIME_ENV="$HOME/.intutic/env/runtime.env"
INTUTIC_HOST="https://api.intutic.ai"
INTUTIC_API_KEY=""
INTUTIC_WORKSPACE_ID="ws_test"
[ -f "$RUNTIME_ENV" ] && source "$RUNTIME_ENV" 2>/dev/null || true

log_event() {
  local verdict="$1" tool="$2" reason="$3"
  # \`tool\` and \`reason\` carry agent-controlled text — the tool name, and the
  # target path quoted into the block reason — and both are spliced into the
  # JSON string below. Escape first: one unescaped quote yields a line
  # JSON.parse rejects, and drainHookEvents drops malformed lines then wipes the
  # log on a successful drain, so the record of a block is destroyed rather than
  # delayed. A crafted path could otherwise close the string and forge fields.
  tool="\${tool//\\\\/\\\\\\\\}";     tool="\${tool//\\"/\\\\\\"}"
  reason="\${reason//\\\\/\\\\\\\\}"; reason="\${reason//\\"/\\\\\\"}"
  # Every C0 control character, not just newline and carriage return. JSON
  # forbids all of U+0000-U+001F unescaped, so a plain TAB in a filename — no
  # adversary required — was still enough to produce a line JSON.parse rejects.
  # (NUL cannot appear in a bash variable, so the range starts at \\x01.)
  tool="\${tool//[$'\\x01'-$'\\x1f']/ }"; reason="\${reason//[$'\\x01'-$'\\x1f']/ }"
  # The workspace id is spliced into the same JSON string. It comes from
  # runtime.env on disk rather than from the agent, so it is lower risk — but a
  # value with a quote in it breaks every audit line the same way, and "lower
  # risk" is not "cannot happen" for a file the operator edits by hand.
  local ws="\${INTUTIC_WORKSPACE_ID}"
  ws="\${ws//\\\\/\\\\\\\\}"; ws="\${ws//\\"/\\\\\\"}"; ws="\${ws//[$'\\x01'-$'\\x1f']/ }"
  local ts; ts="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
  local incident_id; incident_id="$(printf '%s' "\${ts}\${tool}\${INTUTIC_WORKSPACE_ID}" | sha1sum 2>/dev/null | cut -c1-16 || echo "$(date +%s)")"
  local entry="{\\"event\\":\\"\${verdict}\\",\\"toolName\\":\\"\${tool}\\",\\"reason\\":\\"\${reason}\\",\\"workspaceId\\":\\"\${ws}\\",\\"harnessType\\":\\"openhands\\",\\"timestamp\\":\\"\${ts}\\",\\"incidentId\\":\\"\${incident_id}\\"}"
  # Path B: reliable file append
  printf '%s\\n' "$entry" >> "$HOOK_EVENTS_LOG" 2>/dev/null || true
  # Path A: fire-and-forget HTTP (non-blocking, near-real-time)
  if [ -n "$INTUTIC_API_KEY" ]; then
    curl -s -o /dev/null --max-time 3 -X POST \\
      -H "Content-Type: application/json" \\
      -H "Authorization: Bearer $INTUTIC_API_KEY" \\
      -d "{\\"events\\":[$entry]}" \\
      "\${INTUTIC_HOST}/api/v1/hook-events" & disown 2>/dev/null || true
  fi
}


# ── Intutic gate body v3 — harness: openhands ────────────
# Generated by harness/gateBody.ts. Do not edit here; every harness regenerates.
#
# The harness name and version are stamped so this file identifies itself. Both
# were previously passed in and dropped on the floor: opts.harness was declared
# on the option type, supplied by all thirteen writers, and read nowhere.

intutic_normalise() {
  local s="$1"
  s="\${s//[$'\\t\\n\\r\\v\\f']/ }"
  while [ "$s" != "\${s//  / }" ]; do s="\${s//  / }"; done
  printf ' %s ' "$s"
}

# The static floor: compiled in, always enforced, never sourced from disk.
# These are the families with years of evidence behind them, so they block from
# the first run — before any sync has happened.
INTUTIC_FLOOR=(
  'bypass.chflags_nouchg	block	-	any	Governance bypass pattern: clearing the macOS immutable flag on a governance file	 chflags .*nouchg'
  'bypass.chattr_immutable	block	-	any	Governance bypass pattern: clearing the Linux immutable attribute on a governance file	 chattr .*-[a-zA-Z]*i'
  'bypass.chmod_governance	block	-	any	Governance bypass pattern: changing permissions on a governance file	 chmod .*(hooks|\\.intutic|\\.claude|\\.cursor)'
  'bypass.env_kill_switch	block	-	any	Governance bypass pattern: setting a harness environment variable that disables its hooks	 [A-Z][A-Z0-9_]*_HOOKS?='
  'path.intutic_hooks	block	-	any	Shell command references the governance-protected path .intutic/hooks	\\.intutic/hooks'
  'path.intutic_integrity_json	block	-	any	Shell command references the governance-protected path .intutic/integrity.json	\\.intutic/integrity\\.json'
  'path.intutic_events	block	-	any	Shell command references the governance-protected path .intutic/events	\\.intutic/events'
  'path.claude_settings_json	block	-	any	Shell command references the governance-protected path .claude/settings.json	\\.claude/settings\\.json'
  'path.claude_settings_local_json	block	-	any	Shell command references the governance-protected path .claude/settings.local.json	\\.claude/settings\\.local\\.json'
  'path.cursor_hooks_json	block	-	any	Shell command references the governance-protected path .cursor/hooks.json	\\.cursor/hooks\\.json'
  'path.cline_hooks	block	-	any	Shell command references the governance-protected path .cline/hooks	\\.cline/hooks'
  'path.codeium_windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .codeium/windsurf/hooks.json	\\.codeium/windsurf/hooks\\.json'
  'path.windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .windsurf/hooks.json	\\.windsurf/hooks\\.json'
  'path.openhands_hooks_json	block	-	any	Shell command references the governance-protected path .openhands/hooks.json	\\.openhands/hooks\\.json'
  'path.gemini_settings_json	block	-	any	Shell command references the governance-protected path .gemini/settings.json	\\.gemini/settings\\.json'
  'path.agents_plugins_intutic_governance	block	-	any	Shell command references the governance-protected path .agents/plugins/intutic-governance	\\.agents/plugins/intutic-governance'
)

# The dynamic tier, read from the policy snapshot. Additive only: it can turn an
# allow into a block, never a block into an allow. See policySnapshot.ts.
INTUTIC_SNAPSHOT_RULES="\${INTUTIC_SNAPSHOT_RULES:-$HOME/.intutic/hooks/policy-snapshot.rules}"
INTUTIC_SNAPSHOT_DIGEST="none"
INTUTIC_SNAPSHOT_STATE="absent"
INTUTIC_DYNAMIC=()

# A supported escape hatch, and the reason it exists is not politeness.
#
# The fastest workaround available to a developer wrongly blocked is
# \`chflags nouchg\` on the hook — the exact bypass the floor exists to stop. If
# the only way out is one we treat as an attack, we have manufactured our own
# adversary. So: an escape we can see, that disables the **dynamic tier only**.
# The floor is never disabled by it. Every invocation while it is set emits an
# event, so a machine running ungoverned is visible rather than quiet.
INTUTIC_GUARDS_DISABLED=0
if [ "\${INTUTIC_GUARD_DISABLE:-}" = "1" ]; then
  INTUTIC_GUARDS_DISABLED=1
  log_event "guards_disabled" "\${TOOL:-}" "INTUTIC_GUARD_DISABLE=1 — policy-snapshot rules skipped; built-in protections still active" || true
fi

INTUTIC_SNAPSHOT_WORKSPACE=""
INTUTIC_SNAPSHOT_GENERATED=""
if [ -f "$INTUTIC_SNAPSHOT_RULES" ]; then
  INTUTIC_SNAPSHOT_STATE="ok"
  while IFS= read -r _line || [ -n "$_line" ]; do
    case "$_line" in
      '#digest '*)    INTUTIC_SNAPSHOT_DIGEST="\${_line#\\#digest }" ;;
      '#workspace '*) INTUTIC_SNAPSHOT_WORKSPACE="\${_line#\\#workspace }" ;;
      '#generated '*) INTUTIC_SNAPSHOT_GENERATED="\${_line#\\#generated }" ;;
      '#'*|'') : ;;
      *) INTUTIC_DYNAMIC+=("$_line") ;;
    esac
  done < "$INTUTIC_SNAPSHOT_RULES"

  # Integrity, in the order that fails cheapest first.
  #
  # All three of these were parsed and then ignored. A digest nobody recomputes
  # is not integrity, it is a comment; and a workspace id nobody compares means a
  # snapshot from workspace A dropped onto workspace B's machine is enforced
  # verbatim, with B's audit events attributing A's rules to B.
  _intutic_body="$(grep -v '^#' "$INTUTIC_SNAPSHOT_RULES" | grep -v '^$' || true)"
  _intutic_actual=""
  if command -v shasum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | shasum -a 256 | cut -c1-32)"
  elif command -v sha256sum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | sha256sum | cut -c1-32)"
  fi

  if [ -n "$_intutic_actual" ] && [ "$_intutic_actual" != "$INTUTIC_SNAPSHOT_DIGEST" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ -n "$INTUTIC_SNAPSHOT_WORKSPACE" ] && [ -n "\${INTUTIC_WORKSPACE_ID:-}" ]        && [ "$INTUTIC_SNAPSHOT_WORKSPACE" != "$INTUTIC_WORKSPACE_ID" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ \${#INTUTIC_DYNAMIC[@]} -eq 0 ]; then
    # Distinct from "absent". The writer always ships the destructive tier, so a
    # rule-less snapshot means the compile produced nothing — a real fault that
    # otherwise looks exactly like a healthy quiet workspace.
    INTUTIC_SNAPSHOT_STATE="empty"
  fi

  # Degrade to the compiled floor. The dynamic tier is additive, so dropping it
  # returns to yesterday's behaviour rather than opening a hole.
  if [ "$INTUTIC_SNAPSHOT_STATE" = "invalid" ]; then
    INTUTIC_DYNAMIC=()
  fi
fi

# Staleness governs alerting, not enforcement: rules stay in force. If they
# expired into permissiveness, "kill the daemon and wait" would be a supported
# way to disarm governance.
if [ "$INTUTIC_SNAPSHOT_STATE" = "ok" ] && [ -n "$INTUTIC_SNAPSHOT_GENERATED" ]; then
  _intutic_age_days="$(python3 -c 'import sys,datetime
try:
    t=datetime.datetime.fromisoformat(sys.argv[1].replace("Z","+00:00"))
    print(int((datetime.datetime.now(datetime.timezone.utc)-t).total_seconds()//86400))
except Exception:
    print(0)' "$INTUTIC_SNAPSHOT_GENERATED" 2>/dev/null || echo 0)"
  if [ "$_intutic_age_days" -gt 7 ] 2>/dev/null; then
    INTUTIC_SNAPSHOT_STATE="stale"
  fi
fi

case "$INTUTIC_SNAPSHOT_STATE" in
  absent)  log_event "snapshot_absent" "\${TOOL:-}" "No policy snapshot at $INTUTIC_SNAPSHOT_RULES — built-in protections only" || true ;;
  invalid) log_event "snapshot_invalid" "\${TOOL:-}" "Policy snapshot failed its digest or workspace check — dynamic rules dropped" || true ;;
  empty)   log_event "snapshot_empty" "\${TOOL:-}" "Policy snapshot contains no rules — the compile produced nothing" || true ;;
  stale)   log_event "snapshot_stale" "\${TOOL:-}" "Policy snapshot is \${_intutic_age_days} days old and still enforced" || true ;;
esac

# Normalise once; every pattern is written against this shape.
INTUTIC_NCOMMAND="$(intutic_normalise "\${COMMAND:-}")"
INTUTIC_NTARGET="$(intutic_normalise "\${TARGET:-}")"
INTUTIC_NTOOL="$(intutic_normalise "\${TOOL:-}")"

# A rule declares which part of the call it matches. \`any\` means command and
# target — never the tool name, because a pattern like \`\\.claude/settings\\.json\`
# would otherwise be tested against "Write" and quietly match nothing.
intutic_apply() {
  local rec="$1"
  local rid rsev rflags rsubj rreason rsrc s hit
  IFS=$'\\t' read -r rid rsev rflags rsubj rreason rsrc <<< "$rec"
  [ -z "$rsrc" ] && return 0
  # The escape hatch skips the DESTRUCTIVE family only. It is not a way to turn
  # off a workspace's own BLOCK: SOP rules — those are what the customer asked
  # for, and one environment variable disarming them would make the switch the
  # first thing an agent sets. Keyed on the rule-id family, which the snapshot
  # writer assigns: destructive.* versus sop.*
  if [ "$INTUTIC_GUARDS_DISABLED" = "1" ]; then
    case "$rid" in
      destructive.*) return 0 ;;
    esac
  fi
  local _subs=()
  case "$rsubj" in
    tool)    _subs=("$INTUTIC_NTOOL") ;;
    command) _subs=("$INTUTIC_NCOMMAND") ;;
    target)  _subs=("$INTUTIC_NTARGET") ;;
    # Each field is tested separately rather than concatenated. Joining them
    # lets a pattern match across the seam — a command ending in "chflags" and
    # an unrelated target starting with "nouchg" would trip the bypass rule
    # together while neither does alone.
    *)       _subs=("$INTUTIC_NCOMMAND" "$INTUTIC_NTARGET") ;;
  esac
  hit=0
  for s in "\${_subs[@]}"; do
    if [ "$rflags" = "i" ]; then
      printf '%s' "$s" | grep -qiE -- "$rsrc" && hit=1
    else
      printf '%s' "$s" | grep -qE -- "$rsrc" && hit=1
    fi
  done
  [ "$hit" = "1" ] || return 0
  if [ "$rsev" = "shadow" ]; then
    log_event "tool_would_block" "\${TOOL:-}" "\${rreason} [\${rid}]" || true
    return 0
  fi
  if [ "$rsev" = "warn" ]; then
    # Advisory tier: allowed, and recorded with enough shape to triage.
    #
    # The rule id alone was not enough. The warn tier exists to earn promotion to
    # block from a measured false-positive rate, and you cannot call a flag true
    # or false without seeing something of what was run. So: the first token of
    # the command, and nothing else. That is the verb — curl, git, rm — which is
    # what distinguishes "a real destructive command" from "a false positive on a
    # build script", and it carries no paths, no arguments, no secrets. The full
    # command stays out deliberately; that is what DLP exists to keep out of
    # telemetry.
    _intutic_verb="\${INTUTIC_NCOMMAND# }"
    _intutic_verb="\${_intutic_verb%% *}"
    log_event "tool_flagged" "\${TOOL:-}" "\${rreason} [\${rid}] verb=\${_intutic_verb}" || true
    return 0
  fi
  # The rule's own reason, not a generic one: hookEvents.resolveSeverity reads
  # this text for "governance-protected" to file the incident CRITICAL.
  local reason="\${rreason} [\${rid}]"
  echo "[Intutic Governance] BLOCKED: \${reason}" >&2
  log_event "tool_blocked" "\${TOOL:-}" "\${reason}"
  exit 2
}

for _rec in "\${INTUTIC_FLOOR[@]}"; do
  intutic_apply "$_rec"
done

if [ \${#INTUTIC_DYNAMIC[@]} -gt 0 ]; then
  for _rec in "\${INTUTIC_DYNAMIC[@]}"; do
    intutic_apply "$_rec"
  done
fi
# ── end Intutic gate body ────────────────────────────────────────────────────

log_event "tool_allowed" "$TOOL_NAME" ""
exit 0
",
}
`;

exports[`generated hook scripts > pi > matches the recorded output byte for byte 1`] = `
{
  ".intutic/hooks/pi-check.sh": "#!/usr/bin/env bash
# Intutic Pi (earendil-works/pi) PreToolUse governance gate.
# Auto-generated by intutic sync-daemon. DO NOT EDIT.
# Proxy: http://127.0.0.1:4000
# Generated: <TIMESTAMP>
# Workspace: ws_test
set -euo pipefail

# Source runtime credentials (never embedded in this file)
if [ -f "<ROOT>/.intutic/env/runtime.env" ]; then
  # shellcheck disable=SC1090
  source "<ROOT>/.intutic/env/runtime.env"
fi

INTUTIC_HOST="\${INTUTIC_HOST:-https://api.intutic.ai}"
INTUTIC_API_KEY="\${INTUTIC_API_KEY:-}"
INTUTIC_WORKSPACE_ID="\${INTUTIC_WORKSPACE_ID:-ws_test}"

INPUT="$(cat)"

if ! command -v python3 >/dev/null 2>&1; then
  echo "[Intutic Governance] BLOCKED: python3 is required to evaluate tool calls and was not found on PATH." >&2
  echo "[Intutic Governance] Install python3, or unset the Intutic hooks to run ungoverned." >&2
  exit 2
fi

INTUTIC_FIELDS="$(printf '%s' "$INPUT" | python3 -c '
import sys, json
def clean(v):
    return " ".join(str(v).split()) if isinstance(v, str) else ""
try:
    d = json.load(sys.stdin)
except Exception:
    d = {}
if not isinstance(d, dict):
    d = {}
i = d.get("tool_input") or {}
if not isinstance(i, dict):
    i = {}
def first(*keys):
    for k in keys:
        v = i.get(k)
        if isinstance(v, str) and v:
            return clean(v)
    return ""
print(clean(d.get("tool_name", "")))
print(first("path", "file_path", "notebook_path", "filePath"))
print(first("command", "cmd", "script", "shell_command"))
print(clean(d.get("session_id", d.get("sessionId", ""))))
' 2>/dev/null || printf '\\n\\n\\n\\n')"

# Each read is \`|| true\` because command substitution strips trailing newlines:
# a tool call with no command argument yields two lines, not three, so the third
# read hits EOF and returns non-zero. Under \`set -e\` that killed the gate with
# **exit 1** — which every harness reads as a hook error and lets the call
# through. A guard that fails open on the most ordinary input there is (a Write
# with no shell command) is worse than no guard, because it looks present.
{ IFS= read -r TOOL || true; IFS= read -r TARGET || true; IFS= read -r COMMAND || true; IFS= read -r SESSION_ID || true; } <<EOF_INTUTIC_FIELDS
$INTUTIC_FIELDS
EOF_INTUTIC_FIELDS
TOOL="\${TOOL:-}"; TARGET="\${TARGET:-}"; COMMAND="\${COMMAND:-}"; SESSION_ID="\${SESSION_ID:-}"
# Aliases for the names the older writers used. Kept so this extractor is a
# drop-in for every bash gate; the canonical names are the unsuffixed ones.
TOOL_NAME="$TOOL"; TARGET_PATH="$TARGET"


HOOK_EVENTS_LOG="<ROOT>/.intutic/events/hook-events.jsonl"

log_event() {
  local verdict="$1" tool="$2" reason="$3"
  # \`tool\`, \`reason\` and \`SESSION_ID\` carry agent-controlled text — the tool
  # name, the target path quoted into the block reason, and a field lifted
  # straight out of the hook's stdin — and all three are spliced into the JSON
  # string below. Escape first: one unescaped quote yields a line JSON.parse
  # rejects, and drainHookEvents drops malformed lines then wipes the log on a
  # successful drain, so the record of a block is destroyed rather than delayed.
  # A crafted path could otherwise close the string and forge fields.
  tool="\${tool//\\\\/\\\\\\\\}";     tool="\${tool//\\"/\\\\\\"}"
  reason="\${reason//\\\\/\\\\\\\\}"; reason="\${reason//\\"/\\\\\\"}"
  # Every C0 control character, not just newline and carriage return. JSON
  # forbids all of U+0000-U+001F unescaped, so a plain TAB in a filename — no
  # adversary required — was still enough to produce a line JSON.parse rejects.
  # (NUL cannot appear in a bash variable, so the range starts at \\x01.)
  tool="\${tool//[$'\\x01'-$'\\x1f']/ }"; reason="\${reason//[$'\\x01'-$'\\x1f']/ }"
  # The workspace id is spliced into the same JSON string. It comes from
  # runtime.env on disk rather than from the agent, so it is lower risk — but a
  # value with a quote in it breaks every audit line the same way, and "lower
  # risk" is not "cannot happen" for a file the operator edits by hand.
  local ws="\${INTUTIC_WORKSPACE_ID}"
  ws="\${ws//\\\\/\\\\\\\\}"; ws="\${ws//\\"/\\\\\\"}"; ws="\${ws//[$'\\x01'-$'\\x1f']/ }"
  local sid="$SESSION_ID"
  sid="\${sid//\\\\/\\\\\\\\}"; sid="\${sid//\\"/\\\\\\"}"
  sid="\${sid//$'\\n'/ }";     sid="\${sid//$'\\r'/ }"
  local ts; ts="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
  # incidentId = sha1(timestamp + toolName + workspaceId).slice(0,16)
  local incident_id; incident_id="$(printf '%s' "\${ts}\${tool}\${INTUTIC_WORKSPACE_ID}" | sha1sum 2>/dev/null | cut -c1-16 || echo "$(date +%s)")"
  local entry="{\\"event\\":\\"\${verdict}\\",\\"toolName\\":\\"\${tool}\\",\\"reason\\":\\"\${reason}\\",\\"workspaceId\\":\\"\${ws}\\",\\"harnessType\\":\\"pi\\",\\"incidentId\\":\\"\${incident_id}\\",\\"timestamp\\":\\"\${ts}\\"\${sid:+,\\"sessionId\\":\\"\${sid}\\"}}"
  # Path B: reliable file append (sync-daemon drains on FSEvents change)
  printf '%s\\n' "$entry" >> "$HOOK_EVENTS_LOG" 2>/dev/null || true
  # Path A: fire-and-forget HTTP POST (near-real-time dashboard, non-blocking)
  if [ -n "$INTUTIC_API_KEY" ]; then
    curl -s -o /dev/null --max-time 3 -X POST \\
      -H "Content-Type: application/json" \\
      -H "Authorization: Bearer $INTUTIC_API_KEY" \\
      -d "{\\"events\\":[$entry]}" \\
      "\${INTUTIC_HOST}/api/v1/hook-events" & disown 2>/dev/null || true
  fi
}


# ── Intutic gate body v3 — harness: pi ────────────
# Generated by harness/gateBody.ts. Do not edit here; every harness regenerates.
#
# The harness name and version are stamped so this file identifies itself. Both
# were previously passed in and dropped on the floor: opts.harness was declared
# on the option type, supplied by all thirteen writers, and read nowhere.

intutic_normalise() {
  local s="$1"
  s="\${s//[$'\\t\\n\\r\\v\\f']/ }"
  while [ "$s" != "\${s//  / }" ]; do s="\${s//  / }"; done
  printf ' %s ' "$s"
}

# The static floor: compiled in, always enforced, never sourced from disk.
# These are the families with years of evidence behind them, so they block from
# the first run — before any sync has happened.
INTUTIC_FLOOR=(
  'bypass.chflags_nouchg	block	-	any	Governance bypass pattern: clearing the macOS immutable flag on a governance file	 chflags .*nouchg'
  'bypass.chattr_immutable	block	-	any	Governance bypass pattern: clearing the Linux immutable attribute on a governance file	 chattr .*-[a-zA-Z]*i'
  'bypass.chmod_governance	block	-	any	Governance bypass pattern: changing permissions on a governance file	 chmod .*(hooks|\\.intutic|\\.claude|\\.cursor)'
  'bypass.env_kill_switch	block	-	any	Governance bypass pattern: setting a harness environment variable that disables its hooks	 [A-Z][A-Z0-9_]*_HOOKS?='
  'path.intutic_hooks	block	-	any	Shell command references the governance-protected path .intutic/hooks	\\.intutic/hooks'
  'path.intutic_integrity_json	block	-	any	Shell command references the governance-protected path .intutic/integrity.json	\\.intutic/integrity\\.json'
  'path.intutic_events	block	-	any	Shell command references the governance-protected path .intutic/events	\\.intutic/events'
  'path.claude_settings_json	block	-	any	Shell command references the governance-protected path .claude/settings.json	\\.claude/settings\\.json'
  'path.claude_settings_local_json	block	-	any	Shell command references the governance-protected path .claude/settings.local.json	\\.claude/settings\\.local\\.json'
  'path.cursor_hooks_json	block	-	any	Shell command references the governance-protected path .cursor/hooks.json	\\.cursor/hooks\\.json'
  'path.cline_hooks	block	-	any	Shell command references the governance-protected path .cline/hooks	\\.cline/hooks'
  'path.codeium_windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .codeium/windsurf/hooks.json	\\.codeium/windsurf/hooks\\.json'
  'path.windsurf_hooks_json	block	-	any	Shell command references the governance-protected path .windsurf/hooks.json	\\.windsurf/hooks\\.json'
  'path.openhands_hooks_json	block	-	any	Shell command references the governance-protected path .openhands/hooks.json	\\.openhands/hooks\\.json'
  'path.gemini_settings_json	block	-	any	Shell command references the governance-protected path .gemini/settings.json	\\.gemini/settings\\.json'
  'path.agents_plugins_intutic_governance	block	-	any	Shell command references the governance-protected path .agents/plugins/intutic-governance	\\.agents/plugins/intutic-governance'
)

# The dynamic tier, read from the policy snapshot. Additive only: it can turn an
# allow into a block, never a block into an allow. See policySnapshot.ts.
INTUTIC_SNAPSHOT_RULES="\${INTUTIC_SNAPSHOT_RULES:-$HOME/.intutic/hooks/policy-snapshot.rules}"
INTUTIC_SNAPSHOT_DIGEST="none"
INTUTIC_SNAPSHOT_STATE="absent"
INTUTIC_DYNAMIC=()

# A supported escape hatch, and the reason it exists is not politeness.
#
# The fastest workaround available to a developer wrongly blocked is
# \`chflags nouchg\` on the hook — the exact bypass the floor exists to stop. If
# the only way out is one we treat as an attack, we have manufactured our own
# adversary. So: an escape we can see, that disables the **dynamic tier only**.
# The floor is never disabled by it. Every invocation while it is set emits an
# event, so a machine running ungoverned is visible rather than quiet.
INTUTIC_GUARDS_DISABLED=0
if [ "\${INTUTIC_GUARD_DISABLE:-}" = "1" ]; then
  INTUTIC_GUARDS_DISABLED=1
  log_event "guards_disabled" "\${TOOL:-}" "INTUTIC_GUARD_DISABLE=1 — policy-snapshot rules skipped; built-in protections still active" || true
fi

INTUTIC_SNAPSHOT_WORKSPACE=""
INTUTIC_SNAPSHOT_GENERATED=""
if [ -f "$INTUTIC_SNAPSHOT_RULES" ]; then
  INTUTIC_SNAPSHOT_STATE="ok"
  while IFS= read -r _line || [ -n "$_line" ]; do
    case "$_line" in
      '#digest '*)    INTUTIC_SNAPSHOT_DIGEST="\${_line#\\#digest }" ;;
      '#workspace '*) INTUTIC_SNAPSHOT_WORKSPACE="\${_line#\\#workspace }" ;;
      '#generated '*) INTUTIC_SNAPSHOT_GENERATED="\${_line#\\#generated }" ;;
      '#'*|'') : ;;
      *) INTUTIC_DYNAMIC+=("$_line") ;;
    esac
  done < "$INTUTIC_SNAPSHOT_RULES"

  # Integrity, in the order that fails cheapest first.
  #
  # All three of these were parsed and then ignored. A digest nobody recomputes
  # is not integrity, it is a comment; and a workspace id nobody compares means a
  # snapshot from workspace A dropped onto workspace B's machine is enforced
  # verbatim, with B's audit events attributing A's rules to B.
  _intutic_body="$(grep -v '^#' "$INTUTIC_SNAPSHOT_RULES" | grep -v '^$' || true)"
  _intutic_actual=""
  if command -v shasum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | shasum -a 256 | cut -c1-32)"
  elif command -v sha256sum >/dev/null 2>&1; then
    _intutic_actual="$(printf '%s' "$_intutic_body" | sha256sum | cut -c1-32)"
  fi

  if [ -n "$_intutic_actual" ] && [ "$_intutic_actual" != "$INTUTIC_SNAPSHOT_DIGEST" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ -n "$INTUTIC_SNAPSHOT_WORKSPACE" ] && [ -n "\${INTUTIC_WORKSPACE_ID:-}" ]        && [ "$INTUTIC_SNAPSHOT_WORKSPACE" != "$INTUTIC_WORKSPACE_ID" ]; then
    INTUTIC_SNAPSHOT_STATE="invalid"
  elif [ \${#INTUTIC_DYNAMIC[@]} -eq 0 ]; then
    # Distinct from "absent". The writer always ships the destructive tier, so a
    # rule-less snapshot means the compile produced nothing — a real fault that
    # otherwise looks exactly like a healthy quiet workspace.
    INTUTIC_SNAPSHOT_STATE="empty"
  fi

  # Degrade to the compiled floor. The dynamic tier is additive, so dropping it
  # returns to yesterday's behaviour rather than opening a hole.
  if [ "$INTUTIC_SNAPSHOT_STATE" = "invalid" ]; then
    INTUTIC_DYNAMIC=()
  fi
fi

# Staleness governs alerting, not enforcement: rules stay in force. If they
# expired into permissiveness, "kill the daemon and wait" would be a supported
# way to disarm governance.
if [ "$INTUTIC_SNAPSHOT_STATE" = "ok" ] && [ -n "$INTUTIC_SNAPSHOT_GENERATED" ]; then
  _intutic_age_days="$(python3 -c 'import sys,datetime
try:
    t=datetime.datetime.fromisoformat(sys.argv[1].replace("Z","+00:00"))
    print(int((datetime.datetime.now(datetime.timezone.utc)-t).total_seconds()//86400))
except Exception:
    print(0)' "$INTUTIC_SNAPSHOT_GENERATED" 2>/dev/null || echo 0)"
  if [ "$_intutic_age_days" -gt 7 ] 2>/dev/null; then
    INTUTIC_SNAPSHOT_STATE="stale"
  fi
fi

case "$INTUTIC_SNAPSHOT_STATE" in
  absent)  log_event "snapshot_absent" "\${TOOL:-}" "No policy snapshot at $INTUTIC_SNAPSHOT_RULES — built-in protections only" || true ;;
  invalid) log_event "snapshot_invalid" "\${TOOL:-}" "Policy snapshot failed its digest or workspace check — dynamic rules dropped" || true ;;
  empty)   log_event "snapshot_empty" "\${TOOL:-}" "Policy snapshot contains no rules — the compile produced nothing" || true ;;
  stale)   log_event "snapshot_stale" "\${TOOL:-}" "Policy snapshot is \${_intutic_age_days} days old and still enforced" || true ;;
esac

# Normalise once; every pattern is written against this shape.
INTUTIC_NCOMMAND="$(intutic_normalise "\${COMMAND:-}")"
INTUTIC_NTARGET="$(intutic_normalise "\${TARGET:-}")"
INTUTIC_NTOOL="$(intutic_normalise "\${TOOL:-}")"

# A rule declares which part of the call it matches. \`any\` means command and
# target — never the tool name, because a pattern like \`\\.claude/settings\\.json\`
# would otherwise be tested against "Write" and quietly match nothing.
intutic_apply() {
  local rec="$1"
  local rid rsev rflags rsubj rreason rsrc s hit
  IFS=$'\\t' read -r rid rsev rflags rsubj rreason rsrc <<< "$rec"
  [ -z "$rsrc" ] && return 0
  # The escape hatch skips the DESTRUCTIVE family only. It is not a way to turn
  # off a workspace's own BLOCK: SOP rules — those are what the customer asked
  # for, and one environment variable disarming them would make the switch the
  # first thing an agent sets. Keyed on the rule-id family, which the snapshot
  # writer assigns: destructive.* versus sop.*
  if [ "$INTUTIC_GUARDS_DISABLED" = "1" ]; then
    case "$rid" in
      destructive.*) return 0 ;;
    esac
  fi
  local _subs=()
  case "$rsubj" in
    tool)    _subs=("$INTUTIC_NTOOL") ;;
    command) _subs=("$INTUTIC_NCOMMAND") ;;
    target)  _subs=("$INTUTIC_NTARGET") ;;
    # Each field is tested separately rather than concatenated. Joining them
    # lets a pattern match across the seam — a command ending in "chflags" and
    # an unrelated target starting with "nouchg" would trip the bypass rule
    # together while neither does alone.
    *)       _subs=("$INTUTIC_NCOMMAND" "$INTUTIC_NTARGET") ;;
  esac
  hit=0
  for s in "\${_subs[@]}"; do
    if [ "$rflags" = "i" ]; then
      printf '%s' "$s" | grep -qiE -- "$rsrc" && hit=1
    else
      printf '%s' "$s" | grep -qE -- "$rsrc" && hit=1
    fi
  done
  [ "$hit" = "1" ] || return 0
  if [ "$rsev" = "shadow" ]; then
    log_event "tool_would_block" "\${TOOL:-}" "\${rreason} [\${rid}]" || true
    return 0
  fi
  if [ "$rsev" = "warn" ]; then
    # Advisory tier: allowed, and recorded with enough shape to triage.
    #
    # The rule id alone was not enough. The warn tier exists to earn promotion to
    # block from a measured false-positive rate, and you cannot call a flag true
    # or false without seeing something of what was run. So: the first token of
    # the command, and nothing else. That is the verb — curl, git, rm — which is
    # what distinguishes "a real destructive command" from "a false positive on a
    # build script", and it carries no paths, no arguments, no secrets. The full
    # command stays out deliberately; that is what DLP exists to keep out of
    # telemetry.
    _intutic_verb="\${INTUTIC_NCOMMAND# }"
    _intutic_verb="\${_intutic_verb%% *}"
    log_event "tool_flagged" "\${TOOL:-}" "\${rreason} [\${rid}] verb=\${_intutic_verb}" || true
    return 0
  fi
  # The rule's own reason, not a generic one: hookEvents.resolveSeverity reads
  # this text for "governance-protected" to file the incident CRITICAL.
  local reason="\${rreason} [\${rid}]"
  echo "[Intutic Governance] BLOCKED: \${reason}" >&2
  log_event "tool_blocked" "\${TOOL:-}" "\${reason}"
  exit 2
}

for _rec in "\${INTUTIC_FLOOR[@]}"; do
  intutic_apply "$_rec"
done

if [ \${#INTUTIC_DYNAMIC[@]} -gt 0 ]; then
  for _rec in "\${INTUTIC_DYNAMIC[@]}"; do
    intutic_apply "$_rec"
  done
fi
# ── end Intutic gate body ────────────────────────────────────────────────────

log_event "tool_allowed" "$TOOL_NAME" ""
exit 0
",
}
`;
